Self-repl: v1 of mobile-friendliness!

--- a/self_repl_fns/self_repl_fns_local.html
+++ b/self_repl_fns/self_repl_fns_local.html
@@ -279,7 +279,7 @@
       <p><span class="math display">\[\begin{array}{ll}
       r_L : [0,1] \to {\mathbb{R}}, \\
       r_R : [0,1] \to {\mathbb{R}}, &amp; \text{and} \\
-      h   : (1,2) - G \to {\mathbb{R}}&amp; \text{which is tail-consistent.}
+      h   : (1,2) - G \to {\mathbb{R}}, &amp; \text{tail-consistent } h.
       \end{array}\]</span></p>
       <p>Any choice of these three functions results in an exactly self-replicating function. Given any exactly self-replicating function <span class="math inline">\(f\)</span> with respect to <span class="math inline">\(s,\)</span> <span class="math inline">\(t_1,\)</span> and <span class="math inline">\(t_2\)</span> given in (2), and with <span class="math inline">\(f(x) = 0\)</span> outside <span class="math inline">\([0,3]\)</span>, there exists a unique corresponding triple <span class="math inline">\(r_L,\)</span> <span class="math inline">\(r_R,\)</span> and <span class="math inline">\(h\)</span>. Theorem 3 is the key to verifying that this correspondence between such <span class="math inline">\(f\)</span> and triples <span class="math inline">\((r_L, r_R, h)\)</span> is indeed a bijection.</p>
       <p>Below is an example image depicting the function we get by choosing <span class="math inline">\(r_L(x) = \cos(2x)/2 + 1/4\)</span> and <span class="math inline">\(r_R(x) = r_L(1-x)\)</span>. The <span class="math inline">\(h\)</span> function has the constant value <span class="math inline">\(r_L(0) + r_R(0)\)</span>.</p>
