lsh: checkpoint work on image8.

--- a/lsh_post1/images/scratch/lsh_image6.html
+++ b/lsh_post1/images/scratch/lsh_image6.html
@@ -394,6 +394,16 @@
         points.push(getRandomPointInCircle(radius = unitRadius))
     }
 
+    // XXX
+    // Print out the points in a format I can import into glsl.
+    var glslArray = []
+    for (var i = 0; i < numPoints; i++) {
+        glslArray.push(`${points[i].x / unitRadius}, ${points[i].y / unitRadius}`)
+    }
+    var innerData = glslArray.join('), vec2(')
+    var fullGlslData = `vec2[](vec2(${innerData}));`
+    console.log(fullGlslData)
+
 
     // --- Choose random hash parameters.
 
