--- a/lsh_post1/lsh_post1_local.html
+++ b/lsh_post1/lsh_post1_local.html
@@ -108,6 +108,11 @@
       </div>
       <p>Yet another fun way to get an intuitive feel for how much information we’re getting from our hashes is to see which subsets of our circle are matched — and to what degree — by a given point:</p>
       <p>IMAGE 8</p>
+      <p>[CHECK text on turning this into a graph]</p>
+      <div class="figure">
+      <p class="caption">Description</p>
+      <img src="images/image8b@2x.gif" alt="Description" />
+      </div>
       <h2 id="why-this-is-faster"><span class="header-section-number">2.2</span> Why this is faster</h2>
       <p>So far we’ve been sticking to 2-dimensional data because that’s easier to visualize in an article. However, if you think about computing 10 hashes for every 2-dimensional point in order to find neighbors, it may feel like you’re doing more work than the simple solution of a linear search through your points. Let’s review cases where using an LSH is more efficient than other methods of finding nearby points.</p>
       <h3 id="zero-linear-search"><span class="header-section-number">2.2.1</span> Zero linear search</h3>
