thought1: more edits

--- a/thought1/thought1.html
+++ b/thought1/thought1.html
@@ -73,7 +73,7 @@
       <h1 id="a-bigger-picture"><span class="header-section-number">4</span> A bigger picture</h1>
       <p>Descarte, arguing from first principles, suggested that we can be certain of nothing beyond our thoughts and our existence. In light of the non-boolean nature of effective truth, we can see his ideas as presaging an acceptance of the things we casually consider to be true as, upon closer examination, mere conveniences we build atop the unreliable perceptions that we agree to pretend are reality.</p>
       <p>Perhaps rebuilding on these ashes left by Descartes, David Hume argued that philosophy itself is inextricably tied to human nature. Many philosophical arguments act as if they are fundamentally about the universe, and that humanity is incidental to them. But, as Hume pointed out, all of our philosophy exists in human minds, is seen by human eyes, and is spoken in human terms. It does not exist without us, and the more we open our eyes to our role, the more we can be honest about how much we’ve invented where we’d hoped was discovery.</p>
-      <p>This link between humanity and philosophy isn’t about humans being special within the world. Rather, we’re so ordinary that we must relinquish hope that our thoughts might live without us.</p>
+      <p>This link between humanity and philosophy isn’t about humans being special within the world. Rather, we’re so ordinary that we must relinquish hope that our thoughts might have life without us.</p>
     </div>
   </body>
 </html>
